syntax = "proto3";
package book;

service BookAPI {
    rpc retrive(RetriveBookRequest) returns (RetriveBookResponse);
}

message RetriveBookRequest {
    string id = 1;
}

message RetriveBookResponse {
    string id = 1;
    string title = 2;
    string author = 3;
    string publish = 4;
}